[gd_scene load_steps=6 format=3 uid="uid://ccpacke2opwmw"]

[ext_resource type="Texture2D" uid="uid://ci817kq82p566" path="res://resources/basic-spotlight.png" id="1_qaq44"]
[ext_resource type="Script" path="res://scripts/spotlight.gd" id="1_w776v"]

[sub_resource type="Gradient" id="Gradient_46m5w"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jxgou"]
gradient = SubResource("Gradient_46m5w")
fill = 1
fill_from = Vector2(0.504587, 0.513761)
fill_to = Vector2(0.830275, 0.876147)

[sub_resource type="CircleShape2D" id="CircleShape2D_goggk"]
radius = 22.3607

[node name="Spotlight" type="Node2D"]
script = ExtResource("1_w776v")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_qaq44")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(3.8147e-06, 3.8147e-06)
scale = Vector2(3.50781, 3.50781)
color = Color(1, 0, 0, 1)
energy = 4.35
shadow_enabled = true
texture = SubResource("GradientTexture2D_jxgou")

[node name="CollisionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource("CircleShape2D_goggk")

[connection signal="area_entered" from="CollisionArea" to="." method="_on_collision_area_area_entered"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_collision_area_body_entered"]
[connection signal="body_exited" from="CollisionArea" to="." method="_on_collision_area_body_exited"]
